--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,6 +17,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
         pip install pytest flake8
+        pip install -r requirements.txt
     - name: Run Pytest
       run: |
         pytest
